# project-qotd

./: README.md  pyproject.toml
scripts/: run_catalog.py
src/qotd/: cli.py  helper.py  lib.py  types.py
src/qotd/data/: default-catalog.json
tests/: test_qotd_lib.py  test_qotd_types.py
tests/fixtures/: single.json
