[project]
name = "qotd"
version = "0.0.1"
description = "A library and cli that retrieves famous quotes from the internet"
authors = [
    {name = "Jeremy Castagno", email="JeremyBYU@gmail.com"}
]
requires-python= ">=3.9"
dependencies = [
    "requests",
    "click"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-httpserver"]

[project.scripts]
qotd = "qotd.cli:cli"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
qotd = ["*.json"]

[tool.pytest.ini_options]
addopts = "-rPx -v"
testpaths = [
    "tests"
]